--- a/css/style.css
+++ b/css/style.css
@@ -1829,37 +1829,30 @@ body {
 
 .middle__bg {
   position: relative;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  width: 100%;
+  padding-top: 57.07%;
   overflow: hidden;
-  width: 375px;
-  height: 214px;
 }
 @media screen and (min-width:768px) {
   .middle__bg {
-    width: 1512px;
-    height: 640px;
+    padding-top: 42.32%;
   }
 }
 
 .middle__bg-img {
   position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  padding-top: 69.33%;
   background: url(../img/bg_pic.png) center center no-repeat;
-  width: 375px;
-  height: 260px;
   background-position: top -46px left -101px;
-  background-repeat: no-repeat;
   background-size: cover;
 }
 @media screen and (min-width:768px) {
   .middle__bg-img {
+    padding-top: 42.32%;
     background-position: top 0 left 0;
-    width: 1512px;
-    height: 640px;
   }
 }
 
@@ -1869,26 +1862,84 @@ body {
   position: relative;
 }
 
-.recommend__head__form1 {
+@media screen and (min-width:768px) {
+  .recommend__inner {
+    padding-right: 0;
+  }
+}
+
+.recommend__head__sp__form1 {
   position: absolute;
   top: -46px;
 }
 
-.recommend__head__form2 {
+.recommend__head__sp__form2 {
   position: absolute;
   top: -46px;
   left: 96px;
 }
 
-.recommend__head__form3 {
+.recommend__head__sp__form3 {
   position: absolute;
   top: -46px;
   left: 192px;
 }
 
-.recommend__head__form4 {
+.recommend__head__sp__form4 {
   position: absolute;
   top: -46px;
+  right: 0;
+}
+
+.recommend__head__pc__form {
+  position: absolute;
+  top: -110px;
+  width: 252px;
+  height: 120px;
+}
+.recommend__head__pc__form:nth-child(1) {
+  left: 0px;
+}
+.recommend__head__pc__form:nth-child(2) {
+  left: 252px;
+}
+.recommend__head__pc__form:nth-child(3) {
+  left: 504px;
+}
+.recommend__head__pc__form:nth-child(4) {
+  left: 756px;
+}
+.recommend__head__pc__form:nth-child(5) {
+  right: 252px;
+}
+.recommend__head__pc__form:nth-child(6) {
+  right: 0;
+}
+
+.recommend__bottom__pc__form {
+  position: absolute;
+  bottom: -110px;
+  width: 252px;
+  height: 120px;
+  -webkit-transform: rotate(180deg);
+          transform: rotate(180deg);
+}
+.recommend__bottom__pc__form:nth-child(1) {
+  left: 0px;
+}
+.recommend__bottom__pc__form:nth-child(2) {
+  left: 252px;
+}
+.recommend__bottom__pc__form:nth-child(3) {
+  left: 504px;
+}
+.recommend__bottom__pc__form:nth-child(4) {
+  left: 756px;
+}
+.recommend__bottom__pc__form:nth-child(5) {
+  right: 252px;
+}
+.recommend__bottom__pc__form:nth-child(6) {
   right: 0;
 }
 
@@ -1921,20 +1972,65 @@ body {
 .star img {
   width: 28px;
 }
+@media screen and (min-width:768px) {
+  .star img {
+    width: 56px;
+  }
+}
 
 .recommend__title-text {
   color: #FFF;
   font-size: 28px;
   font-weight: 500;
+  font-family: "Kiwi Maru", serif;
   line-height: 125%;
+}
+@media screen and (min-width:768px) {
+  .recommend__title-text {
+    margin-top: 10px;
+    font-size: 40px;
+    font-weight: 500;
+    line-height: 125%;
+    letter-spacing: 10px;
+  }
+}
+
+@media screen and (min-width:768px) {
+  .recommend__content_pc {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    gap: 32px;
+  }
 }
 
 .recommend__cards {
   margin-top: 22px;
   text-align: center;
+  width: calc(100% - 32px);
+}
+@media screen and (min-width:768px) {
+  .recommend__cards {
+    margin-top: 0;
+  }
+}
+
+@media screen and (min-width:768px) {
+  .swiper {
+    margin-left: auto;
+    margin-right: auto;
+    position: relative;
+    overflow: hidden;
+    overflow: clip;
+    list-style: none;
+    padding: 0;
+    z-index: 1;
+    display: block;
+  }
 }
 
 .recommend-swiper-slide {
+  overflow: clip;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex; /* フレックスボックスを使用 */
@@ -1945,10 +2041,45 @@ body {
       -ms-flex-align: center;
           align-items: center; /* 縦方向の中央揃え */
   height: 100%; /* スライドの高さを親要素に合わせる */
+  -ms-flex-negative: 0;
+      flex-shrink: 0;
+}
+@media screen and (min-width:768px) {
+  .recommend-swiper-slide {
+    -ms-flex-negative: 0;
+        flex-shrink: 0;
+    width: 100%;
+    height: 100%;
+    position: relative;
+    -webkit-transition-property: -webkit-transform;
+    transition-property: -webkit-transform;
+    transition-property: transform;
+    transition-property: transform, -webkit-transform;
+    display: block;
+  }
 }
 
 .recommend-swiper-wrapper {
   height: 100%; /* スライダーの高さを100%に設定 */
+}
+@media screen and (min-width:768px) {
+  .recommend-swiper-wrapper {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-transition-property: -webkit-transform;
+    transition-property: -webkit-transform;
+    transition-property: transform;
+    transition-property: transform, -webkit-transform;
+    -webkit-transition-timing-function: var(--swiper-wrapper-transition-timing-function, initial);
+            transition-timing-function: var(--swiper-wrapper-transition-timing-function, initial);
+    -webkit-box-sizing: content-box;
+            box-sizing: content-box;
+  }
 }
 
 .recommend__card {
@@ -1957,9 +2088,22 @@ body {
   height: 402px;
   border-radius: 12px;
 }
+@media screen and (min-width:768px) {
+  .recommend__card {
+    width: 344px;
+    height: 542px;
+    border-radius: 24px;
+  }
+}
 .recommend__card img {
   border-radius: 12px 12px 0 0;
   width: 240px;
+}
+@media screen and (min-width:768px) {
+  .recommend__card img {
+    border-radius: 24px 24px 0 0;
+    width: 344px;
+  }
 }
 
 .recommend__card-text {
@@ -1968,10 +2112,22 @@ body {
   padding-inline: 24px;
   padding-bottom: 51px;
 }
+@media screen and (min-width:768px) {
+  .recommend__card-text {
+    padding-top: 24px;
+    padding-inline: 32px;
+    padding-bottom: 40px;
+  }
+}
 
 .recommend__card-main {
   font-size: 16px;
   font-weight: 700;
+}
+@media screen and (min-width:768px) {
+  .recommend__card-main {
+    font-size: 20px;
+  }
 }
 
 .recommend__card-sub {
@@ -1980,12 +2136,37 @@ body {
   font-size: 12px;
   font-weight: 400;
 }
+@media screen and (min-width:768px) {
+  .recommend__card-sub {
+    margin-top: 24px;
+    font-size: 16px;
+  }
+}
+
+@media screen and (min-width:768px) {
+  .reccomend__last__section {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    gap: 81px;
+    margin-top: 70px;
+  }
+}
 
 .recommend__img-sport {
   text-align: center;
 }
 .recommend__img-sport img {
   width: 250px;
+}
+@media screen and (min-width:768px) {
+  .recommend__img-sport img {
+    width: 495px;
+  }
+}
+
+.recommend__last {
+  text-align: center;
 }
 
 .recommend__white-text {
@@ -1996,10 +2177,24 @@ body {
   line-height: 160%;
   text-align: center;
 }
+@media screen and (min-width:768px) {
+  .recommend__white-text {
+    font-size: 16px;
+    margin-top: 0;
+  }
+}
 
 .recommend__button {
   margin-bottom: 20px;
   margin-top: 25px;
+  margin-left: auto;
+  margin-right: auto;
+}
+@media screen and (min-width:768px) {
+  .recommend__button {
+    margin-top: 22px;
+    margin-left: 5px;
+  }
 }
 
 .recommend__bottom__icon1 {
@@ -2023,4 +2218,175 @@ body {
   position: absolute;
   bottom: -46px;
   right: 0;
+}
+
+.page-top {
+  position: fixed;
+  right: 40px;
+  bottom: 40px;
+  opacity: 0;
+  visibility: hidden;
+  -webkit-transition: opacity 0.7s, visibility 0.7s;
+  transition: opacity 0.7s, visibility 0.7s;
+  z-index: 60;
+}
+.page-top img {
+  width: 100px;
+}
+.page-top.is-show {
+  opacity: 1;
+  visibility: visible;
+}
+
+.qa {
+  margin-top: 84px;
+  margin-bottom: 31px;
+}
+@media screen and (min-width:768px) {
+  .qa {
+    margin-top: 230px;
+    margin-bottom: 120px;
+  }
+}
+
+.qa__icon img {
+  width: 38px;
+}
+@media screen and (min-width:768px) {
+  .qa__icon img {
+    width: 48px;
+  }
+}
+
+.qa__icon {
+  margin-top: 10px;
+}
+
+.qa__title {
+  margin-top: 9px;
+}
+
+.qa__boxes {
+  margin-top: 24px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 12px;
+}
+@media screen and (min-width:768px) {
+  .qa__boxes {
+    margin-top: 20px;
+    gap: 7px;
+  }
+}
+
+.qa__box {
+  border-radius: 12px;
+  border: 2px solid #4A3636;
+  background: #FFF;
+}
+@media screen and (min-width:768px) {
+  .qa__box {
+    margin-top: 18px;
+  }
+}
+.qa__box.is-open .qa-box__head::after {
+  background: url(../img/icon-minas.png) no-repeat center center/contain;
+}
+
+.qa-box__head {
+  padding: 13px 14px 13px 14px;
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 12px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 100%;
+}
+@media screen and (min-width:768px) {
+  .qa-box__head {
+    padding: 24px;
+  }
+}
+.qa-box__head::after {
+  content: "";
+  position: absolute;
+  top: 25%;
+  right: 14px;
+  background: url(../img/icon-plus.png) no-repeat center center/contain;
+  width: 26.2px;
+  height: 26.2px;
+}
+@media screen and (min-width:768px) {
+  .qa-box__head::after {
+    width: 48px;
+    height: 48px;
+    right: 24px;
+  }
+}
+
+.qa-box__head-text {
+  font-size: 14px;
+  font-weight: 700;
+  width: 233px;
+  text-align: left;
+}
+@media screen and (min-width:768px) {
+  .qa-box__head-text {
+    font-size: 20px;
+    width: 871px;
+  }
+}
+
+.qa-box__body {
+  display: none;
+}
+
+.qa-box__a {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 15px;
+  padding: 17px 14px 17px 14px;
+  background-color: #F5F5F5;
+  border-radius: 0 0 15px 15px;
+  width: 100%;
+}
+@media screen and (min-width:768px) {
+  .qa-box__a {
+    padding: 24px;
+  }
+}
+
+.qa-box__a-text {
+  line-height: 170%;
+  font-weight: 400;
+}
+@media screen and (min-width:768px) {
+  .qa-box__a-text {
+    font-size: 16px;
+  }
+}
+
+.qa-box__head-icon, .qa-box__a-icon {
+  font-family: "Josefin Sans", sans-serif;
+  font-size: 24px;
+  font-weight: 400;
+  line-height: 125%;
+  color: #9ED0E0;
+}
+@media screen and (min-width:768px) {
+  .qa-box__head-icon, .qa-box__a-icon {
+    font-size: 32px;
+  }
 }
